# rfconversions

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
benches/: conversions.rs
src/: constants.rs  frequency.rs  lib.rs  noise.rs  p1db.rs  power.rs
tests/: frequency_conversions.rs  practical_scenarios.rs  readme_examples.rs
