[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "Common Radio Frequency conversion equations for RF Modeling"
documentation = "https://docs.rs/rfconversions"
edition = "2021"
homepage = "https://github.com/iancleary/rfconversions"
license = "MIT"
name = "rfconversions"
repository = "https://github.com/iancleary/rfconversions"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "conversions"
harness = false
